--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-beta.3",
-    "next": "15.5.3",
+    "@splidejs/react-splide": "^0.7.12",
+    "install": "^0.13.0",
+    "next": "^15.5.4",
+    "npm": "^11.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
